[gd_scene load_steps=4 format=3 uid="uid://c67cg0gwkl383"]

[ext_resource type="Script" path="res://scripts/main_interface.gd" id="1_v86r2"]
[ext_resource type="Texture2D" uid="uid://df6uqumd68lfc" path="res://assets/sprites/black.png" id="2_vb6hc"]
[ext_resource type="Script" path="res://scripts/preview.gd" id="3_h8nuy"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v86r2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = -18.0
offset_right = 1965.0
offset_bottom = 1097.0
color = Color(0.982, 1, 0.88, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 50

[node name="HSplitContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="NoteTextureButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Set All Notes' Texture"

[node name="EffectTextureButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Set All Effects' Texture"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="LeftMarginSlider" type="HSlider" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 11.0

[node name="LeftMarginButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Set Notes' Left Margin"

[node name="RightMarginSlider" type="HSlider" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 11.0

[node name="RightMarginButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Set Notes' Right Margin"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer4"]
modulate = Color(0.666667, 0.329412, 0.384314, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "note length preview"

[node name="NoteLengthSlider" type="HSlider" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 2.5
step = 0.1
value = 0.5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="ResetColorsButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.878431, 1, 0.831373, 1)
theme_override_font_sizes/font_size = 32
text = "Reset Colors"

[node name="ResetParallaxButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.878431, 1, 0.831373, 1)
theme_override_font_sizes/font_size = 32
text = "Reset Parallax"

[node name="ResetNoteTextureButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.878431, 1, 0.831373, 1)
theme_override_font_sizes/font_size = 32
text = "Reset Texture"

[node name="ResetNoteEffectTextureButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.878431, 1, 0.831373, 1)
theme_override_font_sizes/font_size = 32
text = "Reset Effect"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer"]
layout_mode = 2

[node name="Background" type="TextureRect" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(960, 540)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_vb6hc")
expand_mode = 1
stretch_mode = 6

[node name="BottomMarginAnchor" type="Node2D" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/Background"]
position = Vector2(0, 540)

[node name="TopMargin" type="Line2D" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/Background/BottomMarginAnchor"]
unique_name_in_owner = true
position = Vector2(0, -438)
points = PackedVector2Array(0, 0, 960, 0)
default_color = Color(1, 0.266667, 0.435294, 1)

[node name="BottomMargin" type="Line2D" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/Background/BottomMarginAnchor"]
unique_name_in_owner = true
position = Vector2(0, -102)
points = PackedVector2Array(0, 0, 960, 0)
default_color = Color(1, 0.266667, 0.435294, 1)

[node name="Sizer" type="TextureRect" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(960, 0)
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SpeedSliderContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SpeedSliderContainer"]
modulate = Color(0.67, 0.2546, 0.351527, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Speed"

[node name="SpeedSlider" type="HSlider" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SpeedSliderContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 50.0
max_value = 1000.0
step = 15.0
value = 560.0

[node name="NoteSpacingSliderContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/NoteSpacingSliderContainer"]
modulate = Color(0.67, 0.2546, 0.351527, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Note Spacing"

[node name="NoteSpacingSlider" type="HSlider" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/NoteSpacingSliderContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0

[node name="NoteSizeSliderContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/NoteSizeSliderContainer"]
modulate = Color(0.67, 0.2546, 0.351527, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Note Size (height)"

[node name="NoteSizeSlider" type="HSlider" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/NoteSizeSliderContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 32.0
max_value = 72.0
step = 2.0
value = 64.0

[node name="TopMarginSliderContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TopMarginSliderContainer"]
modulate = Color(0.67, 0.2546, 0.351527, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Top Margin"

[node name="TopMarginSlider" type="HSlider" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TopMarginSliderContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 48.0
max_value = 1080.0
value = 880.0

[node name="VerticalOffsetSliderContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VerticalOffsetSliderContainer"]
modulate = Color(0.67, 0.2546, 0.351527, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Bottom Margin"

[node name="VerticalOffsetSlider" type="HSlider" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VerticalOffsetSliderContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1024.0
max_value = 0.0
value = -192.0

[node name="AudioOffsetContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AudioOffsetContainer"]
modulate = Color(0.67, 0.2546, 0.351527, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Offset Audio"

[node name="AudioOffsetSlider" type="SpinBox" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AudioOffsetContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
min_value = -10.0
max_value = 10.0
step = 0.01
allow_greater = true
allow_lesser = true
update_on_text_changed = true

[node name="PreviewButton" type="Button" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.878431, 1, 0.831373, 1)
theme_override_font_sizes/font_size = 36
text = "Preview Video"

[node name="ExportButton2" type="Button" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.878431, 1, 0.831373, 1)
theme_override_font_sizes/font_size = 36
text = "Export Video"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SquareToggleContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/SquareToggleContainer"]
modulate = Color(0.666667, 0.329412, 0.384314, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Square ratio"

[node name="SquareToggle" type="CheckButton" parent="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/SquareToggleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Preview" type="Node2D" parent="."]
position = Vector2(912, 598)
scale = Vector2(0.5, 0.5)
script = ExtResource("3_h8nuy")

[node name="Timer" type="Timer" parent="Preview"]
wait_time = 0.1
autostart = true

[node name="Anchor" type="Node2D" parent="Preview"]

[node name="NoteHolder" type="Node2D" parent="Preview/Anchor"]

[node name="SetAllNotesTextureFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
position = Vector2i(360, 203)
size = Vector2i(1200, 675)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png")

[node name="SetAllEffectsTextureFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
position = Vector2i(360, 203)
size = Vector2i(1200, 675)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png")

[node name="ExportVideo" type="FileDialog" parent="."]
unique_name_in_owner = true
position = Vector2i(360, 203)
size = Vector2i(1200, 675)
access = 2
filters = PackedStringArray("*.avi")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1216.0
offset_top = 608.0
offset_right = 1912.0
offset_bottom = 1072.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
text = "before you can load your midi file you have to convert it to json.
you can find a converter online i guess sorry about that (i use the tone.js one)
if you have your .json file just drag and drop it here
you also have to drag and drop an .mp3 and a background image if you like
if a track is above another one in the list it will get drawn in front of it
created by almam:)"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1017.0
offset_top = 880.0
offset_right = 1176.0
offset_bottom = 921.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
text = "seconds"

[node name="MP3" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1216.0
offset_top = 1008.0
offset_right = 1905.0
offset_bottom = 1072.0
theme_override_colors/default_color = Color(0.129412, 0.498039, 0.321569, 1)
theme_override_font_sizes/normal_font_size = 22

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1000.0
offset_top = 9.0
offset_right = 1856.0
offset_bottom = 473.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
text = "you dont get an actual preview of the midi notes here sorry"

[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer2/NoteTextureButton" to="." method="_on_note_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer2/EffectTextureButton" to="." method="_on_effect_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer3/LeftMarginButton" to="." method="set_all_notes_left_margin"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer3/RightMarginButton" to="." method="set_all_notes_right_margin"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer4/NoteLengthSlider" to="." method="_on_note_length_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer/ResetColorsButton" to="." method="_on_reset_colors_button_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer/ResetParallaxButton" to="." method="_on_reset_parallax_button_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer/ResetNoteTextureButton" to="." method="_on_reset_note_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer/ResetNoteEffectTextureButton" to="." method="_on_reset_note_effect_texture_button_pressed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SpeedSliderContainer/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/NoteSpacingSliderContainer/NoteSpacingSlider" to="." method="_on_note_spacing_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/NoteSizeSliderContainer/NoteSizeSlider" to="." method="_on_note_size_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TopMarginSliderContainer/TopMarginSlider" to="." method="_on_top_margin_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VerticalOffsetSliderContainer/VerticalOffsetSlider" to="." method="_on_vertical_offset_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AudioOffsetContainer/AudioOffsetSlider" to="." method="_on_audio_offset_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PreviewButton" to="." method="_on_preview_button_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ExportButton2" to="." method="_on_export_button_pressed"]
[connection signal="toggled" from="MarginContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/SquareToggleContainer/SquareToggle" to="." method="_on_square_toggle_toggled"]
[connection signal="timeout" from="Preview/Timer" to="Preview" method="_on_timer_timeout"]
[connection signal="file_selected" from="SetAllNotesTextureFileDialog" to="." method="_on_set_all_notes_texture_file_dialog_file_selected"]
[connection signal="file_selected" from="SetAllEffectsTextureFileDialog" to="." method="_on_set_all_effects_texture_file_dialog_file_selected"]
[connection signal="file_selected" from="ExportVideo" to="." method="_on_export_video_file_selected"]
